# Langchian

./: .gitignore  DocumentLoader.py  MyLLM.ipynb  chat_models.py  hf_chat_model.py  hf_model.py  messages.py  pyproject.toml  textfile.txt  tutorial.py
DocumentLoaders/: doc_loaders.ipynb
Retriever/: Datasource.ipynb  MaximalMarginalRelevance.ipynb
TextSplitters/: textsplit.ipynb
VectorStore/: chroma-db.ipynb
