[project]
name = "langchain-project"
version = "0.1.0"
description = "A Langchain project"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.36.2",
    "langchain>=0.3.30",
    "langchain-community",
    "langchain-core>=0.3.86",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "pypdf>=6.13.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "transformers>=4.57.6",
]

[tool.uv]
