[project]
name = "langchain-project"
version = "0.1.0"
description = "A LangChain project"
requires-python = ">=3.12,<3.13"

dependencies = [
    "dotenv==0.9.9",
    "huggingface-hub==1.19.0",
    # LangChain stack
    "langchain==1.3.9",
    "langchain-core==1.4.7",
    "langchain-community==0.4.2",
    "langchain-chroma==1.1.0",
    "langchain-google-genai==4.2.5",
    "langchain-huggingface==1.2.2",
    # Critical protobuf pin
    "protobuf==3.20.3",
    # Document processing
    "pypdf==6.13.2",
    # UI
    "streamlit==1.58.0",
    # ML stack
    "torch==2.12.0",
    "transformers==5.12.0",
    "ipykernel>=7.3.0",

]

[tool.uv]
